--- a/BogieEngineCore/BogieEngineCore.csproj
+++ b/BogieEngineCore/BogieEngineCore.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ElementBuffer.cs" />
+    <Compile Include="GPUBuffer.cs" />
     <Compile Include="Shaders\Shader.cs" />
     <Compile Include="Textures\Texture.cs" />
     <Compile Include="Vertex.cs" />
