--- a/BogieEngineCore/packages.config
+++ b/BogieEngineCore/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AssimpNet" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Net.Compilers.Toolset" version="3.1.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Win32.SystemEvents" version="4.6.0-preview.19073.11" targetFramework="net472" />
   <package id="OpenTK" version="3.1.0" targetFramework="net472" />
