--- a/BogieEngineConsoleTest/packages.config
+++ b/BogieEngineConsoleTest/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Jitter.Redpoint" version="0.3.0" targetFramework="net472" />
+  <package id="BepuPhysics" version="2.1.0" targetFramework="net472" />
+  <package id="BepuUtilities" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Net.Compilers.Toolset" version="3.1.0" targetFramework="net472" developmentDependency="true" />
   <package id="OpenTK" version="3.1.0" targetFramework="net472" />
   <package id="SixLabors.Core" version="1.0.0-beta0008" targetFramework="net472" />
