--- a/BogieEngineCore/BogieEngineCore.csproj
+++ b/BogieEngineCore/BogieEngineCore.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -37,8 +38,11 @@
     <Reference Include="AssimpNet, Version=4.1.0.0, Culture=neutral, PublicKeyToken=0d51b391f59f42a6, processorArchitecture=MSIL">
       <HintPath>..\packages\AssimpNet.4.1.0\lib\net40\AssimpNet.dll</HintPath>
     </Reference>
-    <Reference Include="Jitter, Version=0.1.7.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Jitter.Redpoint.0.3.0\lib\net45\Jitter.dll</HintPath>
+    <Reference Include="BepuPhysics, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\BepuPhysics.2.1.0\lib\netstandard2.0\BepuPhysics.dll</HintPath>
+    </Reference>
+    <Reference Include="BepuUtilities, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\BepuUtilities.2.1.0\lib\netstandard2.0\BepuUtilities.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Win32.SystemEvents, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Win32.SystemEvents.4.6.0-preview.19073.11\lib\net461\Microsoft.Win32.SystemEvents.dll</HintPath>
@@ -93,6 +97,10 @@
     <Compile Include="Nodes\Node.cs" />
     <Compile Include="Nodes\RigidBody.cs" />
     <Compile Include="Nodes\Root.cs" />
+    <Compile Include="Nodes\StaticBody.cs" />
+    <Compile Include="Physics\NarrowPhaseCallbacks.cs" />
+    <Compile Include="Physics\PoseIntegratorCallbacks.cs" />
+    <Compile Include="Physics\SimpleThreadDispatcher.cs" />
     <Compile Include="Shading\Shader.cs" />
     <Compile Include="TestPhysicsObject.cs" />
     <Compile Include="Texturing\Texture.cs" />
