--- a/BogieEngineCore/BogieEngineCore.csproj
+++ b/BogieEngineCore/BogieEngineCore.csproj
@@ -98,6 +98,9 @@
     <Compile Include="Nodes\RigidBody.cs" />
     <Compile Include="Nodes\Root.cs" />
     <Compile Include="Nodes\StaticBody.cs" />
+    <Compile Include="Physics\Contact.cs" />
+    <Compile Include="Physics\ContactDictionary.cs" />
+    <Compile Include="Physics\GamePhysics.cs" />
     <Compile Include="Physics\NarrowPhaseCallbacks.cs" />
     <Compile Include="Physics\PoseIntegratorCallbacks.cs" />
     <Compile Include="Physics\SimpleThreadDispatcher.cs" />
