--- a/BogieEngineCore/BogieEngineCore.csproj
+++ b/BogieEngineCore/BogieEngineCore.csproj
@@ -84,28 +84,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseGame.cs" />
-    <Compile Include="Nodes\Camera.cs" />
+    <Compile Include="Components\Component.cs" />
+    <Compile Include="Components\Model.cs" />
+    <Compile Include="Components\RigidBody.cs" />
+    <Compile Include="Components\RigidBox.cs" />
+    <Compile Include="Components\StaticBody.cs" />
+    <Compile Include="Entities\Camera.cs" />
+    <Compile Include="Entities\Entity.cs" />
     <Compile Include="ContentManager.cs" />
     <Compile Include="ElementBuffer.cs" />
     <Compile Include="GPUBuffer.cs" />
     <Compile Include="IDisposable.cs" />
-    <Compile Include="Modelling\Mesh.cs" />
     <Compile Include="Modelling\MeshData.cs" />
+    <Compile Include="Modelling\MeshInstance.cs" />
     <Compile Include="Modelling\Model.cs" />
     <Compile Include="Modelling\ModelLoader.cs" />
-    <Compile Include="Nodes\ModelNode.cs" />
-    <Compile Include="Nodes\Node.cs" />
-    <Compile Include="Nodes\RigidBody.cs" />
-    <Compile Include="Nodes\Root.cs" />
-    <Compile Include="Nodes\StaticBody.cs" />
     <Compile Include="Physics\ContactInfo.cs" />
     <Compile Include="Physics\ContactDictionary.cs" />
     <Compile Include="Physics\GamePhysics.cs" />
     <Compile Include="Physics\NarrowPhaseCallbacks.cs" />
     <Compile Include="Physics\PoseIntegratorCallbacks.cs" />
+    <Compile Include="Physics\Shapes\Shape.cs" />
     <Compile Include="Physics\SimpleThreadDispatcher.cs" />
     <Compile Include="Shading\Shader.cs" />
-    <Compile Include="TestPhysicsObject.cs" />
     <Compile Include="Texturing\Texture.cs" />
     <Compile Include="Texturing\TextureData.cs" />
     <Compile Include="Transform.cs" />
@@ -113,7 +114,6 @@
     <Compile Include="Vertex.cs" />
     <Compile Include="VertexArray.cs" />
     <Compile Include="VertexBuffer.cs" />
-    <Compile Include="TestGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
