--- a/BogieEngineCore/BogieEngineCore.csproj
+++ b/BogieEngineCore/BogieEngineCore.csproj
@@ -95,6 +95,9 @@
     <Compile Include="ElementBuffer.cs" />
     <Compile Include="GPUBuffer.cs" />
     <Compile Include="IDisposable.cs" />
+    <Compile Include="Materials\PhongMaterial.cs" />
+    <Compile Include="Materials\TextureMaterial.cs" />
+    <Compile Include="Materials\Material.cs" />
     <Compile Include="Modelling\MeshData.cs" />
     <Compile Include="Modelling\MeshInstance.cs" />
     <Compile Include="Modelling\Model.cs" />
