--- a/BogieEngineCore/BogieEngineCore.csproj
+++ b/BogieEngineCore/BogieEngineCore.csproj
@@ -121,10 +121,7 @@
     <Compile Include="Physics\Shapes\Shape.cs" />
     <Compile Include="Physics\SimpleThreadDispatcher.cs" />
     <Compile Include="Shading\NormalShader.cs" />
-    <Compile Include="Shading\PhongShader.cs" />
-    <Compile Include="Shading\SpecularShader.cs" />
-    <Compile Include="Shading\DiffuseShader.cs" />
-    <Compile Include="Shading\AmbientShader.cs" />
+    <Compile Include="Shading\BlinnPhongShader.cs" />
     <Compile Include="Shading\Shader.cs" />
     <Compile Include="Shading\DefaultShader.cs" />
     <Compile Include="Texturing\Texture.cs" />
@@ -148,16 +145,7 @@
     <None Include="Resources\Shaders\NormalLight.frag">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Resources\Shaders\PhongLight.frag">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Resources\Shaders\SpecularLight.frag">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Resources\Shaders\DiffuseLight.frag">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Resources\Shaders\AmbientLight.frag">
+    <None Include="Resources\Shaders\BlinnPhongLight.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Resources\Shaders\default.frag">
